dongle-smartcontract/test_results_v17.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
warning: unused import: `Vec`
 --> src\types.rs:1:50
  |
1 | use soroban_sdk::{Address, String, contracttype, Vec};
  |                                                  ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:3:5
  |
3 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::types::VerificationStatus`
 --> src\test.rs:4:5
  |
4 | use crate::types::VerificationStatus;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:8:58
  |
8 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

error[E0599]: no variant or associated item named `DuplicateReview` found for enum `ContractError` in the current scope
  --> src\review_registry.rs:29:39
   |
29 |             return Err(ContractError::DuplicateReview);
   |                                       ^^^^^^^^^^^^^^^ variant or associated item not found in `ContractError`
   |
  ::: src\errors.rs:7:1
   |
 7 | pub enum ContractError {
   | ---------------------- variant or associated item `DuplicateReview` not found for this enum

error[E0599]: no method named `unwrap` found for unit type `()` in the current scope
   --> src\review_registry.rs:299:83
    |
299 |         client.add_review(&project_id, &reviewer, &5, &Some(comment_cid.clone())).unwrap();
    |                                                                                   ^^^^^^ method not found in `()`

For more information about this error, try `rustc --explain E0599`.
warning: `dongle-contract` (lib) generated 1 warning
error: could not compile `dongle-contract` (lib) due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `dongle-contract` (lib test) generated 4 warnings (1 duplicate)
error: could not compile `dongle-contract` (lib test) due to 2 previous errors; 4 warnings emitted
